# pyeye-mcp

./: .buildinfo  .gitignore  .markdownlint.yaml  .mcp.json  .mcp.json.example  .pre-commit-config.yaml  .pycodemcp.json.example  .pydocstyle  .pyeye.json.example  .secrets.baseline  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOCUMENTATION.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MIGRATION-PYEYE.md  README.md  RELEASING.md  TEST_DOCS.md  TEST_MIGRATION_GUIDE.md  TOKEN_SAVINGS_VERIFICATION.md  configuration.html  contributing.html  demo_analysis.md  demo_find_symbol.py  genindex.html  index.html  objects.inv  pyproject.toml  quickstart.html  search.html  searchindex.js  setup.sh  test_commit.md  test_mcp_demo.py
.claude/: README.md  settings.json  startup-context.md  worktree-helper.sh
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: INTEGRATION-EXAMPLE.md  README-SELF-IMPROVEMENT.md  TEMPLATE-WITH-LEARNING.md  cross-platform-issues.yaml  cross-platform-validator.md  pr-workflow.md  smart-commit-examples.md  smart-commit.md  worktree-manager.md
.claude/feedback/: .gitignore  ARCHITECTURE-DECISION.md  EVENT-DRIVEN-SUMMARY.md  IMPLEMENTATION-SUMMARY.md  LEARNING-LIFECYCLE.md  QUICK-START.md  README.md  WHEN-AGENTS-GET-SMARTER.md  analyze_agent_performance.py  apply_learnings.sh  event_driven_learning.sh
.claude/instructions/: 00-documentation-system.md  01-core-rules.md  02-session-startup.md  03-mcp-dogfooding.md  04-agent-triggers.md  05-workflow-issues.md  06-workflow-commits.md  07-validation.md  08-project-specific.md  09-task-management.md  10-cross-platform.md  11-pr-requirements.md
.doctrees/: configuration.doctree  contributing.doctree  environment.pickle  index.doctree  quickstart.doctree
.doctrees/__intersphinx_cache__/: jedi_objects.inv
.doctrees/api/: index.doctree
.doctrees/architecture/: caching-strategy.doctree  index.doctree  overview.doctree  plugin-system.doctree
.doctrees/examples/: index.doctree
.github/: RELEASE_CHECKLIST.md  dependabot.yml  pull_request_template.md
.github/workflows/: build-deploy-docs.yml  ci.yml  dev-version.yml  docs.yml  release.yml
_modules/: index.html
_modules/pycodemcp/: server.html
_sources/: contributing.rst.txt  index.rst.txt
_sources/api/: index.rst.txt
_sources/architecture/: overview.rst.txt  plugin-system.rst.txt
_sources/examples/: index.rst.txt
_static/: documentation_options.js
api/: index.html
architecture/: caching-strategy.html  index.html  overview.html  plugin-system.html
benchmarks/: BASELINE_RESULTS.md  benchmark_simple.py
docs/: CLAUDE_AGENTS.md  CLAUDE_WORKTREE_WORKFLOW.md  COVERAGE.md  DOGFOODING_INTEGRATION.md  DOGFOODING_SETUP.md  LABELS.md  METRICS_BASELINE.md  Makefile  RELEASE.md  RELEASE_AUTOMATION_AGENT.md  RELEASE_AUTOMATION_CLI.md  TROUBLESHOOTING.md  UNIFIED_METRICS.md  api-redesign.md  debugging-connection-drops.md  migration-guide.md  namespace-packages.md  test_coverage_agent_usage.md
docs/api/: README.md  core-navigation.md  django-tools.md  flask-tools.md  module-analysis.md  pydantic-tools.md  quick-reference.md
docs/decisions/: DECISIONS.md
docs/development/: test_generation_guidelines.md
docs/source/: conf.py  configuration.rst  contributing.rst  index.rst  quickstart.rst
docs/testing/: CONVENTIONS.md  FIXTURES.md  PERFORMANCE.md  STRATEGY.md
examples/: index.html
examples/configurations/: enterprise.json  microservices.json  monorepo.json  plugin-system.json
examples/test_project/: example.py
hooks/: hooks.json
plugins/worktree-hook/: README.md  worktree_create.py  worktree_create.yaml  worktree_remove.py
scripts/: check_cross_platform_paths.py  check_release_status.sh  check_version.py  check_version_sync.py  decision_log_nudge.py  dogfooding_metrics.py  grep_tracker.sh  install_hooks.sh  install_plugin_deps.py  mcp_wrapper.sh  measure_subclass_fallback.py  prepare_release.py  refresh_version.py  release_agent.py  setup_aliases.sh  setup_dogfooding.sh  setup_grep_tracking.sh  test_coverage_agent.py  test_cross_platform_agent.py  unified_metrics.py  validate_changelog.py  validate_version_format.py  worktree_safety.py
scripts/claude_hooks/: README.md  detect_grep_usage.py  hooks.json  mcp_analytics.py  session_tracker.py  setup_mcp_monitoring.sh  track_mcp_call.py  track_mcp_success.py
skills/architecture-review/: SKILL.md  auditor.md
skills/decision-log/: SKILL.md
skills/pyeye-scenarios/: SKILL.md
skills/pyeye-verify/: SKILL.md
skills/python-explore/: SKILL.md
src/pycodemcp/: __init__.py  _version.pyi  async_utils.py  cache.py  config.py  connection_pool.py  dependency_tracker.py  exceptions.py  import_analyzer.py  metrics.py  metrics_hook.py  namespace_resolver.py  path_utils.py  project_manager.py  scope_utils.py  server.py  settings.py  unified_metrics.py  validation.py
src/pyeye/: __init__.py  _ast_targets.py  _jedi_location.py  _module_sentinel.py  _version.py  cache.py  (+20 more)
tests/: __init__.py  conftest.py  test_architecture_review_gate.py  test_architecture_review_guard.py  test_architecture_review_ranking.py  test_architecture_review_skill_conformance.py  test_architecture_review_state.py  test_artifact_cache_configurable.py  test_artifact_cache_metrics_surface.py  test_async_utils.py  test_automation.py  test_cache.py  test_call_hierarchy_file_field.py  test_ci_uv_pinned.py  test_config.py  test_config_bridge.py  test_connection_pool.py  test_contextual_type_resolution.py  test_coverage_agent.py  test_decision_log_nudge.py  test_dependency_tracker.py  test_django_plugin.py  test_dogfooding_checkout.py  test_dogfooding_integration.py  test_dogfooding_metrics.py  test_dogfooding_workflow.py  test_exceptions.py  test_field_filtering.py  test_find_imports_performance.py  test_flask_plugin.py  test_get_type_info_backward_compatibility.py  test_get_type_info_inheritance.py  test_get_type_info_integration_tiktoken.py  test_get_type_info_token_savings.py  test_granular_cache.py  test_helpers.py  test_import_analyzer.py  test_inspect_submodules_count.py  test_jedi_analyzer.py  test_jedi_analyzer_sys_path.py  (+50 more)
(+329 files in other folders)
