[project]
name = "python-code-intelligence-mcp"
version = "0.1.0"
description = "Extensible Python code intelligence MCP server for semantic analysis and code navigation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Mark Hangie", email = "mark@example.com"}
]
keywords = ["mcp", "python", "code-intelligence", "jedi", "lsp", "static-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastmcp>=0.1.0",
    "jedi>=0.19.0",
    "tree-sitter>=0.20.0",
    "tree-sitter-python>=0.20.0",
    "watchdog>=3.0.0",
    "diskcache>=5.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/hangie/python-code-intelligence-mcp"
Repository = "https://github.com/hangie/python-code-intelligence-mcp"
Issues = "https://github.com/hangie/python-code-intelligence-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pycodemcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
