[project]
name = "python-code-intelligence-mcp"
version = "0.1.0"
description = "Extensible Python code intelligence MCP server for semantic analysis and code navigation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Mark O'Keefe (O'Keefe & Co Consulting Pty Ltd)", email = "mark_okeefe@mac.com"}
]
keywords = ["mcp", "python", "code-intelligence", "jedi", "lsp", "static-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastmcp>=0.1.0",
    "jedi>=0.19.0",
    "tree-sitter>=0.20.0",
    "tree-sitter-python>=0.20.0",
    "watchdog>=3.0.0",
    "diskcache>=5.6.0",
    "mcp[cli]>=1.13.0",
    "aiofiles>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black==25.1.0",  # Pinned to match .pre-commit-config.yaml
    "ruff==0.12.10",  # Pinned to avoid unexpected linting rule changes
    "mypy==1.17.1",  # Pinned to avoid type checking behavior changes
    "detect-secrets==1.5.0",  # Pinned to match current version
    "bandit[toml]==1.8.6",  # Pinned for consistent security checks
    "safety>=3.0.0",
    "commitizen>=3.13.0",
    "pydocstyle==6.3.0",  # Pinned for consistent docstring checks
    "isort==6.0.1",  # Pinned for consistent import sorting
    # Note: pre-commit removed from dev deps - install at user level instead:
    # python3 -m pip install --user --break-system-packages pre-commit
]

[project.urls]
Homepage = "https://github.com/okeefeco/python-code-intelligence-mcp"
Repository = "https://github.com/okeefeco/python-code-intelligence-mcp"
Issues = "https://github.com/okeefeco/python-code-intelligence-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pycodemcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint.isort]
# Make ruff's import sorting compatible with black
combine-as-imports = true
force-wrap-aliases = true

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "SIM102",  # sometimes nested if statements are more readable
    "UP038",  # use of | in isinstance is not always more readable
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

# isort configuration removed - using ruff's import sorting instead

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src/pycodemcp",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=85",
    "-v"
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/pycodemcp"]
omit = [
    "*/tests/*",
    "*/benchmarks/*",
    "*/__pycache__/*",
    "*/conftest.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):"
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
    "src/pycodemcp/__init__.py:__version__"
]

[dependency-groups]
dev = [
    "psutil>=6.0.0",
]
